--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "joi": "^17.12.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.5.3",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
   }
 }
