--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
-    "express": "^4.18.2",
+    "express": "^4.19.1",
     "joi": "^17.12.2",
     "method-override": "^3.0.0",
     "mongoose": "^7.5.3",
