--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^7.5.3",
     "nodemon": "^3.1.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "prettier": "^3.2.5"
   }
 }
